syntax = "proto3";
 
//package helloworld;
 
// The KFServingGRPC service definition.
service KFServingGRPC {
    // Sends a request
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SendSomething (HelloRequest) returns (HelloReply) {}
}
 
// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}
 
// The response message containing the message
message HelloReply {
    string message = 1;
}

